Stop sidebar image getting squashed on short pages

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -185,6 +185,7 @@ input, textarea {
 	}
 	.image {
 		vertical-align: top;
+		max-height: initial;
 	}
 	img {
 		z-index: -1;
